@@ -1657,7 +1657,7 @@ static void output_directories(struct ent **ar, int n,
             if (!(autoindex_opts & SUPPRESS_LAST_MOD)) {
                 if (ar[x]->lm != -1) {
                     char time_str[MAX_STRING_LEN];
-                    apr_exploded_time_t ts;
+                    apr_time_exp_t ts;
                     apr_explode_localtime(&ts, ar[x]->lm);
                     apr_strftime(time_str, &rv, MAX_STRING_LEN, 
                                  "</td><td align=\"right\">%d-%b-%Y %H:%M  ", &ts);
@@ -1740,7 +1740,7 @@ static void output_directories(struct ent **ar, int n,
             if (!(autoindex_opts & SUPPRESS_LAST_MOD)) {
                 if (ar[x]->lm != -1) {
                     char time_str[MAX_STRING_LEN];
-                    apr_exploded_time_t ts;
+                    apr_time_exp_t ts;
                     apr_explode_localtime(&ts, ar[x]->lm);
                     apr_strftime(time_str, &rv, MAX_STRING_LEN, 
                                 "%d-%b-%Y %H:%M  ", &ts);
